<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">
        <TextView
                android:text="@string/verify_your_email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" android:textSize="16sp" android:textStyle="bold"/>
        <EditText android:layout_width="match_parent" android:layout_height="48dp"
                  android:id="@+id/edtFazpassOtpEmail" android:background="@drawable/rectangle_grey_border"
                  android:hint="@string/anvarisy_fazpass_com" android:paddingStart="8dp" android:paddingEnd="8dp"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:layout_marginTop="32dp" android:layout_marginBottom="48dp"
                  android:inputType="textWebEmailAddress" android:maxLength="13"
                  android:importantForAutofill="no"></EditText>
        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnFazpassOtpEmailVerify"
                android:layout_gravity="center_horizontal" android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>