<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp" app:srcCompat="@drawable/logo_whatsapp"
                android:id="@+id/imgValidationLogo" android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/we_send_verification_code_to_your_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvValidationTitle"
                android:gravity="center" android:textStyle="bold" android:textSize="14sp"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/_628581175xxxx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvValidationMobile" android:textSize="13sp"
                android:textStyle="bold" android:gravity="center" android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/please_insert_your_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_horizontal" android:textSize="12sp"
                android:textStyle="bold" android:layout_marginBottom="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_horizontal"
                android:showDividers="middle"
                android:divider="@drawable/horizontal_margin"
                android:layout_marginBottom="16dp" android:id="@+id/llValidationOtpDigit">

<!--            <EditText
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTextPersonName" android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_border"/>
            <EditText
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTextPersonName2" android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_border"/>
            <EditText
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTextPersonName3" android:layout_marginEnd="8dp"
                    android:background="@drawable/rectangle_border"/>
            <EditText
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTextPersonName4" android:background="@drawable/rectangle_border"/>
            -->
        </LinearLayout>
        <Button
                android:text="@string/verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button"
                android:background="@drawable/rectangle_border" android:layout_gravity="center_horizontal"
                android:textSize="18sp" android:paddingStart="3dp" android:paddingEnd="3dp" android:paddingTop="2dp"
                android:paddingBottom="2dp" android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/not_received_the_code_resend_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" android:gravity="center_horizontal"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>